--- 1.8 2016-xx-xx ---
*** bosixnet-webui ***
* Update hosts map only when host address is really changed.
* Add special page "/timestamps": it shows list of hosts and timestamps of
  their last activity.
* Use show_map() instead of show_file() for "/hosts" and "/timestamps" pages.
  This allows to decrease the number of disk I/O operations and works faster
  (even with comparing with reading from modern SSD drive connected via SATA 3).
  [TODO: add link to tests results]
* Add ability to check HTTP_HOST variable for incoming connections. It might be
  useful when there are few websites hosted on a same server and you prefer to
  use domain names for separating them instead of using of single domain name
  with different URL prefixes. (See HOST_STR and BASIC_STR config variables
  or --basic-str and --host-str command-line options accordingly.)
* Code refactoring.

--- 1.7 2015-09-30 ---
*** common ***
* Relicense from GPLv2 or later to Expat.
*** bosixnet-daemon ***
* Use `ip` tool instead of `ifconfig` for getting local IPv6 address.
* Added ability to select specific network device for getting local IPv6
  address. By default script searches IPv6 addresses for all network devices
  of the system and chooses the last of them.
* Protect file with list of hosts from simultaneous editing.
* Additional check if current IPv6 address is valid.

--- 1.6 2014-02-11 ---
*** bosixnet-daemon ***
* Improved simple check for validity of IPv6 addresses received from server:
  - strings should be longer than 6 characters
  - strings should have at least three ":" characters
  - fifth character from strings should be equal to ":"
  (Affects only script update_hosts.)
* Added support of multiple servers:
  - IPv6 address is sent to all available servers
  - data about hosts is got from the first server which replies to request
  See file bosixnet-daemon.conf for examples of configuring.
*** bosixnet-webui ***
* Removed support of POST requests.