@@ -1,14 +1,14 @@
 # Basic part of full URL on server.
 # For example, if full URL looks like:
 # http://ipv6.example.com/bosixnet/
-# then BASIC_STR should be:
-# BASIC_STR=/bosixnet/
+# then PREFIX_STR should be:
+# PREFIX_STR=/bosixnet/
 # or
-# BASIC_STR=/
+# PREFIX_STR=/
 
 # If there are few websites hosted on a same server and you prefer to use
 # domain names for separating them instead of using of single domain name
-# with different URL prefixes (see BASIC_STR variable above) then set
+# with different URL prefixes (see PREFIX_STR variable above) then set
 # HOST_STR variable to required domain name. For example:
 # HOST_STR=ipv6.example.com
 # HOST_STR=93.184.216.34
