@@ -1,4 +1,4 @@
-.TH "bosixnet_webui" 1 "05 Feb 2014"
+.TH "bosixnet_webui" 1 "19 Oct 2016"
 .SH "NAME"
 bosixnet_webui \- FastCGI program which passively listens for incoming connections and generates list of hosts in your IPv6 network. This daemon prepares data which may be put directly into /etc/hosts.
 .SH "SYNOPSIS"
@@ -21,8 +21,8 @@ Show version and exit.
 .TP
 .RB "Special options:"
 .TP
-.BR "\-b <string>,  \-\-basic-str <string>"
-Set basic url (default: /bosixnet/).
+.BR "\-b <string>,  \-\-prefix-str <string>"
+Set url prefix (default: /bosixnet/).
 .TP
 .BR "\-l <dir>,  \-\-log-dir <dir>"
 Set log directory (default: /var/tmp/bosixnet).
